[project]
name = "tpp-database-utils"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "coverage>=7.9.0",
    "pip==25.0.1",
    "pip-tools>=7.4.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pyyaml>=6.0.2",
    "ruff>=0.11.13",
]

[tool.coverage.run]
branch = true
dynamic_context = "test_function"
omit = [".venv/*"]

[tool.coverage.report]
fail_under = 100
skip_covered = true
show_missing = true

[tool.coverage.html]
show_contexts = true

[tool.pytest.ini_options]

[tool.ruff]
line-length = 88
exclude = [
    ".direnv",
    ".git",
    ".github",
    ".ipynb_checkpoints",
    ".pytest_cache",
    ".venv",
    "__pycache__",
    "docker",
    "htmlcov",
    "venv",
]

[tool.ruff.lint]
extend-select = [
    "A",   # flake8-builtins
    "I",   # isort
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
]
extend-ignore = ["E501", "E731"]

[tool.ruff.lint.isort]
lines-after-imports = 2
